examples/test/testpolicy463.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy463
  namespace: namespace466
spec:
  podSelector:
    matchLabels:
      key45: value26
      key17: value38
      key22: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value3
          key8: value9
      podSelector:
        matchLabels:
          key0: value12
